Fix bug 603416 - startup crash [@ cal::UTC()]. r=mschroeder